--- a/WeatherAac/app/build.gradle
+++ b/WeatherAac/app/build.gradle
@@ -1,15 +1,21 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 27
     flavorDimensions "default"
     defaultConfig {
-        applicationId "com.aac.aac.weatheraac"
+        applicationId 'com.aac.weather'
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // Enabling multidex support.
+        multiDexEnabled true
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
 
     buildTypes {
@@ -28,11 +34,10 @@ android {
         prod {
             buildConfigField "String", "BASE_URL", "\"https://production.com\""
         }
-
         dev {
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
-            buildConfigField "String", "BASE_URL", "\"https://dev.com\""
+            buildConfigField "String", "BASE_URL", "\"http://samples.openweathermap.org/\""
         }
     }
 
@@ -54,6 +59,7 @@ android {
         testImplementation 'junit:junit:4.12'
         androidTestImplementation 'com.android.support.test:runner:1.0.2'
         androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+        implementation 'com.android.support:appcompat-v7:27.1.1'
 
         // Gson
         implementation 'com.google.code.gson:gson:2.8.1'
@@ -95,4 +101,6 @@ android {
         // ViewModel, LiveData
         implementation "android.arch.lifecycle:extensions:1.1.1"
     }
+}
+dependencies {
 }
