--- a/WeatherAac/app/build.gradle
+++ b/WeatherAac/app/build.gradle
@@ -33,11 +33,13 @@ android {
     productFlavors {
         prod {
             buildConfigField "String", "BASE_URL", "\"https://production.com\""
+            buildConfigField "String", "API_ID", "\"b6907d289e10d714a6e88b30761fae22\""
         }
         dev {
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
             buildConfigField "String", "BASE_URL", "\"http://samples.openweathermap.org/\""
+            buildConfigField "String", "API_ID", "\"b6907d289e10d714a6e88b30761fae22\""
         }
     }
 
@@ -67,31 +69,33 @@ android {
         implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
 
         // retrofit
-        implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+        implementation 'com.squareup.retrofit2:retrofit:2.4.0'
         implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
         implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
         // OkHttp
-        implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-        implementation 'com.squareup.okio:okio:1.13.0'
+        implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+        implementation 'com.squareup.okio:okio:1.14.0'
 
         // RxAndroid
         implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-        implementation 'io.reactivex.rxjava2:rxjava:2.1.2'
+        implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
 
         // Dagger
-        implementation 'com.google.dagger:dagger-compiler:2.6.1'
-        implementation 'com.google.dagger:dagger:2.6.1'
+        implementation 'com.google.dagger:dagger-compiler:2.13'
+        implementation 'com.google.dagger:dagger:2.13'
+        implementation 'com.google.dagger:dagger-android:2.13'
         compileOnly 'javax.annotation:jsr250-api:1.0'
-        annotationProcessor 'com.google.dagger:dagger-compiler:2.6.1'
+        annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+        annotationProcessor 'com.google.dagger:dagger-android-processor:2.13'
 
         // Butter Knife
         implementation 'com.jakewharton:butterknife:8.8.1'
         annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
         // room
-        implementation "android.arch.persistence.room:runtime:1.1.1-rc1"
-        annotationProcessor "android.arch.persistence.room:compiler:1.1.1-rc1"
+        implementation "android.arch.persistence.room:runtime:1.1.1"
+        annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
         // Lifecycles
         implementation "android.arch.lifecycle:runtime:1.1.1"
@@ -100,6 +104,9 @@ android {
 
         // ViewModel, LiveData
         implementation "android.arch.lifecycle:extensions:1.1.1"
+
+        // logger
+        implementation 'com.orhanobut:logger:2.1.1'
     }
 }
 dependencies {
